# boxnote-converter

./: LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
boxnotes/: __init__.py  cli.py  detector.py  exceptions.py  models.py
boxnotes/converters/: base.py  markdown.py  plaintext.py
boxnotes/parsers/: base.py  new_format.py  old_format.py
boxnotes/utils/: attribs.py  images.py
tests/: test_attribs.py  test_cli.py  test_converters.py  test_detector.py  test_images.py  test_models.py
